fix: overflow only in 3D SPACE

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -21,9 +21,10 @@ body
     max-width: auto
     width: 100%
     transition: max-width .5s ease
-    // overflow: hidden
+    overflow: hidden
     & > .blok
       margin-top: -2px
+  // SPACES
   &[data-space="2D"]
     padding: 0
     main
@@ -34,6 +35,7 @@ body
     main
       width: 88vw
       max-width: 1150px
+      overflow: visible
       & > .blok:first-child, & > .blok:nth-child(2) 
         .blokTopPanel
           display: inline-block
@@ -46,7 +48,7 @@ body
       max-width: 400px
       border: 12px solid var(--theme-type)
       border-radius: 36px
-
+  // THEMES
   &[data-theme="BASIC"]
     .themeBackground
       opacity: 0
